--- a/lab0/lab0_parser/CMakeLists.txt
+++ b/lab0/lab0_parser/CMakeLists.txt
@@ -4,4 +4,10 @@ project(lab0)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(lab0 main.cpp)
+add_executable(lab0 
+	main.cpp
+	File.cpp
+	Frequency.cpp
+	Sorted.cpp
+	Write.cpp
+)
